--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -5,52 +5,79 @@
 
 .city-name {
   width: 200px;
-  height: 41px;
-  padding: 8px 6px;
+  align-items: center;
+  display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: center;
+    color: #0268d6;
 }
 
 .team-winorl {
   width: 58.03px;
-  height: 41px;
-  padding: 8px 6px;
 }
 
 .winper {
   width: 86.98px;
-  height: 41px;
-  padding: 8px 6px;
 }
 
 .conrecord {
-  width: 86.77px;
-  height: 41px;
-  padding: 8px 6px;
+  width: 85.28px;
 }
 
 .divrecord {
-width: 65.83px;
-height: 41px;
-padding: 8px 6px;
+width: 64.7px;
 }
 
 .gamesback {
-  width: 66.3px;
-  height: 41px;
+  width: 80.44px;
 }
 .home {
   width: 89.8px;
-  height: 41px;
   }
   .road {
       width: 86.34px;
-      height: 41px;
       }
 .last10 {
-  width: 109px;
-height: 41px;
+  width: 109.98px;
 }
 
 .streak {
   width: 112.19px;
-  height: 41px;
+  }
+
+  td {
+    padding: 8px 6px;
+    font: 14px "Roboto Condensed", Arial, sans-serif;
+background-color: #FFFFFF;
+height: 41px;
+font-weight: 400;
+line-height: 1.25;
+border-style: solid;
+  }
+
+  tbody:nth-child(11) {
+    border-bottom: 3px dashed #0268d6;
+  }
+
+  tbody:nth-child(15) {
+    border-bottom: 3px solid #0268d6;
+  }
+
+  tbody:nth-child(30) {
+    border-bottom: 3px dashed #0268d6;
+  }
+
+  tbody:nth-child(34) {
+    border-bottom: 3px solid #0268d6;
+  }
+
+  tbody:after {
+        content: "";
+    box-shadow: 2px 0 5px -2px hsl(0deg 0% 39% / 20%);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 100%;
   }
