--- a/basketball-app/src/components/standings/Standings.css
+++ b/basketball-app/src/components/standings/Standings.css
@@ -369,6 +369,8 @@ white-space: nowrap;
 vertical-align: bottom;
 display: table-cell;
 font-weight: bold;
+border-top: 1px solid #e5e7eb;
+
 }
 
 th {
@@ -386,16 +388,15 @@ border-bottom: 1px solid #ebe9e7;
 ;
 }
 
-h2.conference-title {
+.conference-title {
   left: 0;
   text-align: left;
   padding: 2px 0;
-  border-bottom: 1px solid #e5e7eb;
   height: 35px;
   width: 300px;
   position: sticky;
   color: #000000;
-  display: block;
+  display: flex;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
   margin-inline-start: 0px;
@@ -403,4 +404,6 @@ h2.conference-title {
   font-family: Knockout Wide,sans-serif;
   font-size: 1.25rem;
   font-weight: 400;
+  padding-top: 70px;
   }
+
