--- a/basketball-app/src/components/league/League.css
+++ b/basketball-app/src/components/league/League.css
@@ -15,3 +15,12 @@ img {
   width: 254px;
   height: 254px;
 }
+
+label select {
+  border: 1px solid orange;
+  width: 100%;
+}
+
+h2 a {
+  text-decoration: none;
+}
