--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -74,7 +74,7 @@ border-style: solid;
     border-bottom: 2px solid #0268d6;
   }
 
-  tbody:after {
+  tbody::after {
         content: "";
     box-shadow: 2px 0 5px -2px hsl(0deg 0% 39% / 20%);
     position: absolute;
