Changing styling based on if they have a salary found or not

--- a/basketball-app/src/components/player/Player.css
+++ b/basketball-app/src/components/player/Player.css
@@ -130,7 +130,7 @@ h4.players-birthday {
   margin-left: -40px;
 }
 
-.players-dollars {
+.noSalaryFound {
   width: 138px;
   margin-left: -40px;
 }
