--- a/basketball-app/src/components/standings/Standings.css
+++ b/basketball-app/src/components/standings/Standings.css
@@ -1,160 +1,4 @@
-/* *, ::after, ::before {
-  box-sizing: border-box;
-  border: 0 solid;
-}
-
-
-.home {
-width: 89.8px;
-height: 41px;
-}
-.road {
-width: 86.34px;
-height: 41px;
-}
-
-tr {
-  display: table-row;
-  vertical-align: inherit;
-  height: 41px;
-  width: 564.34px;
-  font-size: 12px;
-}
-
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
-  border-right: none;
-  border-left: none;
-  border-top: none;
-  margin-top: 30px;
-  width: 1133px;
-}
-
-.conference-name {
-  width: 1093px;
-  height: 41px;
-  color: #ffffff;
-  font-size: 12px;
-  padding: 0 16px;
-}
-
-.team-data {
-  width: 1093px;
-  height: 616.5px;
-  display: table-row-group;
-  vertical-align: middle;
-}
-
-.team::after {
-  content: "";
-  box-shadow: 2px 0 5px -2px hsl(0deg 0% 39% / 20%);
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 10px;
-  height: 100%;
-}
-
-th {
-  font: 10px "Roboto Condensed", Arial, sans-serif;
-  color: #343232;
-  padding: 14px 6px;
-  background-color: #ffffff;
-text-align: right;
-letter-spacing: 1px;
-white-space: nowrap;
-vertical-align: bottom;
-display: table-cell;
-font-weight: bold;
-}
-
-.conf {
-  width: 85.28px;
-  height: 41px;
-}
-
-.conference-title {
-left: 0;
-text-align: left;
-padding: 2px 0;
-border-bottom: 1px solid #e5e7eb;
-font-family: "Knockout Wide",sans-serif;
-font-size: 20px;
-font-weight: 400;
-width: 1093px;
-height: 35px;
-position: sticky;
-color: #000000;
-display: block;
-margin-block-start: 0.83em;
-margin-block-end: 0.83em;
-margin-inline-start: 0px;
-margin-inline-end: 0px;
-}
-
-.division-name span {
-  text-align: left;
-}
-
-.div {
-  width: 64.7px;
-  height: 41px;
-}
-
-.span {
-  width: 22.5px;
-  height: 18px;
-}
-
-
-.record {
-  width: 57.04px;
-  height: 41px;
-border-color: #ebe9e7;
-}
-
-.team {
-  width: 200px;
-  height: 41px;
-  color: #000000;
-  position: sticky;
-left: 0;
-z-index: 5;
-background-color: #ffffff;
-text-align: left;
-}
-
-tbody {
-  display: table-row-group;
-  vertical-align: middle;
-  border-color: inherit;
-  width: 1052px;
-  height: 41px;
-}
-
-.winpercent {
-  width: 85.49px;
-  height: 41px;
-}
-
-.gb {
-  width: 80.44px;
-  height: 41px;
-}
-
-.last10 {
-width: 109px;
-height: 41px;
-}
-
-.streak {
-width: 112.19px;
-height: 41px;
-} */
-
-
- *, ::after, ::before {
+*, ::after, ::before {
   box-sizing: border-box;
   border: 0 solid;
 }
@@ -192,6 +36,7 @@ table {
   border-left: none;
   border-top: none;
   margin-top: 30px;
+  margin-left: 20px;
 }
 
 .division-name {
@@ -349,7 +194,7 @@ tbody {
 }
 
 td.home {
-  text-align: center;
+  text-align: start;
 }
 
 .division-title {
@@ -389,8 +234,6 @@ border-bottom: 1px solid #ebe9e7;
 }
 
 .conference-title {
-  left: 0;
-  text-align: left;
   padding: 2px 0;
   height: 35px;
   width: 300px;
@@ -405,5 +248,22 @@ border-bottom: 1px solid #ebe9e7;
   font-size: 1.25rem;
   font-weight: 400;
   padding-top: 70px;
+  margin-left: 20px;
   }
 
+.conference-west {
+  padding: 2px 0;
+  height: 35px;
+  width: 300px;
+  position: sticky;
+  color: #000000;
+  display: flex;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-family: Knockout Wide,sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  padding-top: 70px;
+}
