--- a/basketball-app/src/components/navigation/Navigation.css
+++ b/basketball-app/src/components/navigation/Navigation.css
@@ -13,6 +13,8 @@
     text-decoration: none;
     text-align: center;
     margin-top: 20px;
+    border: 1px solid rebeccapurple;
+    background-color: beige;
   }
   
   nav a:hover {
