--- a/basketball-app/src/components/standings/Standings.css
+++ b/basketball-app/src/components/standings/Standings.css
@@ -3,6 +3,11 @@
   border: 0 solid;
 }
 
+body {
+  background-image: linear-gradient(#1d428a 33.33%, #c8102e 33.33%, #c8102e 66.66%, white 66.66%);
+
+}
+
 .rundiff {
   width: 48px;
   height: 48px;
@@ -238,7 +243,7 @@ border-bottom: 1px solid #ebe9e7;
   height: 35px;
   width: 300px;
   position: sticky;
-  color: #000000;
+  color: #ffffff;
   display: flex;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
@@ -251,12 +256,11 @@ border-bottom: 1px solid #ebe9e7;
   margin-left: 20px;
   }
 
-.conference-west {
+ .conference-west {
   padding: 2px 0;
   height: 35px;
   width: 300px;
   position: sticky;
-  color: #000000;
   display: flex;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
@@ -266,4 +270,5 @@ border-bottom: 1px solid #ebe9e7;
   font-size: 1.25rem;
   font-weight: 400;
   padding-top: 70px;
-}
+  color: #ffffff;
+} 
