Added point differential between points scored and points given up and added a green color in the number is greater than 0 and a red color if the number is less than 0

--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -5,6 +5,14 @@
 width: 100%;
 }
 
+.Positive {
+  color: #094;
+}
+
+.Negative {
+  color: #d00;
+}
+
 .city-name {
   width: 200px;
   align-items: center;
