--- a/basketball-app/src/components/standings/Standings.css
+++ b/basketball-app/src/components/standings/Standings.css
@@ -23,9 +23,9 @@
   height: 32px;
 }
 
-.App {
-  background-image: linear-gradient(#1d428a 33.33%, #c8102e 33.33%, #c8102e 66.66%, white 66.66%);
-
+.background-container {
+    background-image: linear-gradient(#1d428a 33.33%, #c8102e 33.33%, #c8102e 66.66%, white 66.66%);
+    margin-top: -17px;
 }
 
 tr {
