--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -20,7 +20,11 @@ width: 100%;
     flex-wrap: nowrap;
     flex-direction: row;
     align-items: center;
-    color: #0268d6;
+
+}
+
+td.city-name a {
+  color: #06c
 }
 
 .team-winorl {
