--- a/basketball-app/src/components/league/League.css
+++ b/basketball-app/src/components/league/League.css
@@ -20,8 +20,15 @@ h2 {
 label select {
   border: 1px solid orange;
   width: 100%;
+  justify-content: center;
 }
 
 h2 a {
   text-decoration: none;
+}
+
+@media only screen and (max-width: 420px) {
+  label {
+    margin-top: 5px;
+  }
 }
