--- a/basketball-app/src/components/navigation/Navigation.css
+++ b/basketball-app/src/components/navigation/Navigation.css
@@ -22,3 +22,20 @@
     /* background-color: #ddd; */
     color: black;
   }
+
+  @media only screen and (max-width: 420px) {
+    .nav a {
+      margin-left: 5px;
+      width: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 820px) {
+    .nav a {
+      margin-left: 5px;
+      width: 100%;
+    }
+    label {
+      position: sticky;
+    }
+  }
