--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -88,7 +88,7 @@ border-style: solid;
 
   tbody::after {
         content: "";
-    box-shadow: 2px 0 5px -2px hsl(0deg 0% 39% / 20%);
+    /* box-shadow: 2px 0 5px -2px hsl(0deg 0% 39% / 20%); */
     position: absolute;
      top: 0;
     right: 0;
