added spacing between eleemnts inside of the navbar

--- a/basketball-app/src/components/navigation/Navigation.css
+++ b/basketball-app/src/components/navigation/Navigation.css
@@ -18,8 +18,11 @@
     background-color: beige;
   }
   
+.nav {
+  justify-content: space-evenly;
+}
+
   nav a:hover {
-    /* background-color: #ddd; */
     color: black;
   }
 
