--- a/basketball-app/src/components/player/Player.css
+++ b/basketball-app/src/components/player/Player.css
@@ -150,7 +150,7 @@ div {
 .player-vitals ul {
   font-size: 1.145rem;
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  line-height: 1.2;
+  /* line-height: 1.2; */
   float: left;
   list-style-type: none;
   border-right: 1px solid #ffffff;
