--- a/basketball-app/src/components/standings/Standings.css
+++ b/basketball-app/src/components/standings/Standings.css
@@ -6,6 +6,7 @@
 .background-container {
     background-image: linear-gradient(#1d428a 33.33%, #c8102e 33.33%, #c8102e 66.66%, white 66.66%);
     margin-top: -17px;
+    width: 100%;
 }
 
 table {
@@ -116,7 +117,6 @@ th {
   padding: 14px 6px;
   background-color: #ffffff;
 text-align: center;
-/* text-align: justify; */
 letter-spacing: 1px;
 white-space: nowrap;
 vertical-align: bottom;
