--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -1,7 +1,3 @@
-.stats-standings {
-  border-bottom: 3px solid #ebe9e7;
-}
-
 .Positive {
   color: #094;
 }
@@ -59,10 +55,12 @@ font-weight: 400;
     line-height: 1.25;
     text-align: left;
     white-space: nowrap;
-    background-color: #fff;
     color: #000;
-    border-top: 1px #ebe9e7;
     font-stretch: condensed;
+  }
+
+  tbody {
+    border-bottom: 2px solid #ebe9e7;
   }
 
   tbody:nth-child(11) {
@@ -83,7 +81,6 @@ font-weight: 400;
 
   tbody::after {
         content: "";
-    /* box-shadow: 2px 0 5px -2px hsl(0deg 0% 39% / 20%); */
     position: absolute;
      top: 0;
     right: 0;
