--- a/basketball-app/src/components/standings/Standings.css
+++ b/basketball-app/src/components/standings/Standings.css
@@ -1,12 +1,14 @@
-*, ::after, ::before {
+*,
+::after,
+::before {
   box-sizing: border-box;
   border: 0 solid;
 }
 
 .background-container {
-    background-image: linear-gradient(#1d428a 33.33%, #c8102e 33.33%, #c8102e 66.66%, white 66.66%);
-    margin-top: -17px;
-    width: 100%;
+  background-image: linear-gradient(#1d428a 33.33%, #c8102e 33.33%, #c8102e 66.66%, white 66.66%);
+  margin-top: -17px;
+  width: 100%;
 }
 
 table {
@@ -16,7 +18,7 @@ table {
   border-right: none;
   border-left: none;
   border-top: none;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   margin-left: 20px;
 }
 
@@ -26,6 +28,7 @@ table {
   color: #ffffff;
   font-size: 12px;
   padding: 0 16px;
+  padding-left: 0;
 }
 
 th span {
@@ -81,7 +84,7 @@ th span {
 .road-record {
   text-align: justify;
   vertical-align: top;
-  font-family: Roboto Condensed,Arial,sans-serif;
+  font-family: Roboto Condensed, Arial, sans-serif;
   white-space: nowrap;
   letter-spacing: 1px;
   font-size: 10px;
@@ -95,19 +98,19 @@ th span {
   height: 41px;
   color: #000;
   position: sticky;
-left: 0;
-z-index: 5;
-text-align: left;
-font: 10px "Roboto Condensed", Arial, sans-serif;
-padding: 14px 6px;
-background-color: #fff;
-text-align: right;
-letter-spacing: 1px;
-white-space: nowrap;
-vertical-align: bottom;
-display: table-cell;
-font-weight: bold;
-border-top: 1px solid #e5e7eb;
+  left: 0;
+  z-index: 5;
+  text-align: left;
+  font: 10px "Roboto Condensed", Arial, sans-serif;
+  padding: 14px 6px;
+  background-color: #fff;
+  text-align: right;
+  letter-spacing: 1px;
+  white-space: nowrap;
+  vertical-align: bottom;
+  display: table-cell;
+  font-weight: bold;
+  border-top: 1px solid #e5e7eb;
 }
 
 th {
@@ -115,49 +118,48 @@ th {
   color: #343232;
   padding: 14px 6px;
   background-color: #ffffff;
-text-align: center;
-letter-spacing: 1px;
-white-space: nowrap;
-vertical-align: bottom;
-display: table-cell;
-font-weight: bold;
-border-bottom: 1px solid #ebe9e7;
-vertical-align: bottom;
-text-align: right;
-white-space: nowrap;
-letter-spacing: 1px;
-font-size: 10px;
-padding: 14px 6px;
+  text-align: center;
+  letter-spacing: 1px;
+  white-space: nowrap;
+  vertical-align: bottom;
+  display: table-cell;
+  font-weight: bold;
+  border-bottom: 1px solid #ebe9e7;
+  vertical-align: bottom;
+  text-align: right;
+  white-space: nowrap;
+  letter-spacing: 1px;
+  font-size: 10px;
+  padding: 14px 6px;
 }
 
 .conference-title {
-  padding: 2px 0;
-  height: 35px;
-  position: sticky;
-  color: #ffffff;
-  display: flex;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-family: Knockout Wide,sans-serif;
-  font-size: 1.25rem;
-  font-weight: 400;
-  padding-top: 70px;
-  margin-left: 20px;
-  }
-
- .conference-west {
   position: sticky;
   display: flex;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  font-family: Knockout Wide,sans-serif;
+  font-family: Knockout Wide, sans-serif;
   font-size: 1.25rem;
   font-weight: 400;
   padding-top: 70px;
   margin-top: 10px;
   color: #ffffff;
-} 
+  margin-left: 20px;
+}
+
+.conference-west {
+  position: sticky;
+  display: flex;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-family: Knockout Wide, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  padding-top: 70px;
+  margin-top: 10px;
+  color: #ffffff;
+}
