--- a/basketball-app/src/components/player/Player.css
+++ b/basketball-app/src/components/player/Player.css
@@ -133,6 +133,13 @@ h4.players-birthday {
   margin-left: -38px;
 }
 
+h4.players-Short {
+  width: 200px;
+  font-size: 16px;
+  display: flex;
+  /* margin-left: -38px; */
+}
+
 .noSalaryFound {
   width: 200px;
   margin-left: -30px;
@@ -158,12 +165,24 @@ div {
   margin-left: 1px;
 }
 
+.players-college-long {
+  flex-wrap: nowrap;
+  width: 200px;
+  margin-left: -40px;
+}
+
 .players-college {
   flex-wrap: nowrap;
-  /* margin-left: -20px; */
-  /* text-align: center; */
 }
 
 .player-header-number a {
   color: #fff;
+}
+
+.players-weight {
+  width: max-content;
+}
+
+.heavier {
+  margin-left: -10px;
 }
