--- a/basketball-app/src/components/row/Row.css
+++ b/basketball-app/src/components/row/Row.css
@@ -10,9 +10,9 @@
   width: 200px;
   align-items: center;
   display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
 
 }
 
@@ -39,56 +39,46 @@ td.city-name a {
 
 .streak {
   width: 112.19px;
-  }
+}
 
-  td {
-    padding: 8px 6px;
-    font: 14px "Roboto Condensed", Arial, sans-serif;
-background-color: #FFFFFF;
-height: 41px;
-font-weight: 400;
-line-height: 1.25;
-border-style: solid;
-font-weight: 400;
-    font-size: .875rem;
-    font-family: Roboto Condensed,Arial,sans-serif;
-    line-height: 1.25;
-    text-align: left;
-    white-space: nowrap;
-    color: #000;
-    font-stretch: condensed;
-  }
+td {
+  padding: 8px 6px;
+  font: 14px "Roboto Condensed", Arial, sans-serif;
+  background-color: white;
+  height: 41px;
+  font-weight: 400;
+  line-height: 1.25;
+  border-style: solid;
+  font-weight: 400;
+  font-size: 14px;
+  font-family: Roboto Condensed, Arial, sans-serif;
+  text-align: left;
+  white-space: nowrap;
+  color: #000;
+  font-stretch: condensed;
+}
 
-  tbody {
-    border-bottom: 2px solid #ebe9e7;
-  }
+tbody {
+  border-bottom: 2px solid #ebe9e7;
+}
 
-  tbody:last-child {
-    border-bottom: none;
-  }
+tbody:last-child {
+  border-bottom: none;
+}
 
-  tbody:nth-child(11) {
-    border-bottom: 2px dashed #0268d6;
-  }
+tbody:nth-child(11) {
+  border-bottom: 2px dashed #0268d6;
+}
 
 
-  tbody:nth-child(15) {
-    border-bottom: 2px solid #0268d6;
-  }
+tbody:nth-child(15) {
+  border-bottom: 2px solid #0268d6;
+}
 
-  tbody:nth-child(30) {
-    border-bottom: 2px dashed #0268d6;
-  }
+tbody:nth-child(30) {
+  border-bottom: 2px dashed #0268d6;
+}
 
-  tbody:nth-child(34) {
-    border-bottom: 2px solid #0268d6;
-  }
-
-  tbody::after {
-        content: "";
-    position: absolute;
-     top: 0;
-    right: 0;
-    width: 10px;
-    height: 100%;
-  }
+tbody:nth-child(34) {
+  border-bottom: 2px solid #0268d6;
+}
